k8s/ingress/api-comic-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-comic-gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - api.lyhuor.xyz
      secretName: api-comic-gateway-tls
  rules:
    - host: api.lyhuor.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-comic-gateway-service
              port:
                number: 80
